[build-system]
requires = [ "hatchling", "hatch-vcs" ]
build-backend = "hatchling.build"

[project]
name = "ytpb-mpv"
version = "2024.3.4"
authors = [ { name = "Maxim Stolyarchuk" } ]
keywords = [ "mpv", "youtube" ]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "ytpb",
    "python-mpv-jsonipc>=1.2.0",
]

[project.scripts]
ytpb-mpv = "ytpb_mpv.__main__:main"
