[build-system]
requires = [ "hatchling", "hatch-vcs" ]
build-backend = "hatchling.build"

[project]
name = "ytpb-mpv"
description = "A socket listener to complement mpv-ytpb"
readme = "README.md"
version = "2024.3.27"
authors = [ { name = "Maxim Stolyarchuk" } ]
keywords = [ "mpv", "youtube" ]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "ytpb>=2024.3.27",
    "python-mpv-jsonipc>=1.2.0",
]

[project.scripts]
ytpb-mpv = "ytpb_mpv.__main__:main"
